# refract

./: .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CHANGELOG.md  CODING_PLAN.md  CONTRIBUTING.md  Makefile  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  publish.yml
examples/: benchmark_demo.py  code_search.py  compare_cosine.py  custom_metric.py  evaluate_learned_router.py  quickstart.py  rag_pipeline.py  train_learned_router.py  vector_db_integration.py
samples/: mini_corpus.json
src/refract/: __init__.py  _version.py  search.py  types.py
src/refract/analysis/: __init__.py  query_analyzer.py  space_analyzer.py
src/refract/benchmark/: __init__.py  datasets.py  eval_metrics.py  harness.py
src/refract/embedders/: __init__.py  base.py  cohere.py  openai.py  sentence_transformers.py
src/refract/fusion/: __init__.py  weighted.py
src/refract/metrics/: __init__.py  base.py  bm25.py  cosine.py  euclidean.py  mahalanobis.py  registry.py
src/refract/routing/: __init__.py  base.py  composite.py  heuristic.py  learned.py
tests/: conftest.py
tests/integration/: test_search_api.py
tests/unit/: test_fusion.py  test_heuristic_router.py  test_learned_router.py  test_metrics.py  test_query_analyzer.py  test_space_analyzer.py  test_types.py
