[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "refract-search"
dynamic = ["version"]
description = "Context-aware similarity search. Dynamic metric routing that understands your query and your data."
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "Ujjwal Kumar", email = "ujjwalkumar26@users.noreply.github.com" },
]
keywords = [
    "search",
    "similarity",
    "rag",
    "retrieval",
    "vector-search",
    "semantic-search",
    "cosine-similarity",
    "embeddings",
    "nlp",
    "information-retrieval",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Text Processing :: Indexing",
    "Typing :: Typed",
]
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "scikit-learn>=1.3",
    "rank_bm25>=0.2",
]

[project.optional-dependencies]
sentence-transformers = ["sentence-transformers>=2.6"]
openai = ["openai>=1.0"]
cohere = ["cohere>=5.0"]
learned = ["torch>=2.0"]
benchmark = ["datasets>=2.14"]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.4",
    "mypy>=1.8",
    "pre-commit>=3.0",
]
all = [
    "refract-search[sentence-transformers,openai,cohere,learned,benchmark]",
]

[project.urls]
Homepage = "https://github.com/ujjwalkumar26/refract"
Documentation = "https://github.com/ujjwalkumar26/refract#readme"
Repository = "https://github.com/ujjwalkumar26/refract"
Issues = "https://github.com/ujjwalkumar26/refract/issues"
Changelog = "https://github.com/ujjwalkumar26/refract/blob/main/CHANGELOG.md"

[tool.hatch.version]
path = "src/refract/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/refract"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q --strict-markers"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks integration tests",
]

[tool.ruff]
target-version = "py39"
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "TCH",  # flake8-type-checking
    "RUF",  # ruff-specific rules
]
ignore = [
    "E501",   # line too long — handled by formatter
    "UP007",  # use X | Y for union — we support 3.9
]

[tool.ruff.lint.isort]
known-first-party = ["refract"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true
ignore_missing_imports = true
